Fix text color in tables (dark mode) (#631)
* Clean up layout

* fix json and exclude 404 page from search

* Fix text color in table (dark mode)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,6 +71,10 @@ html[data-theme='dark'] {
     .sidenav-link, .sidenav-title {
         color: var(--color-light) !important;
     }
+
+    .table {
+        color:var(--color-light);
+    }
     
 }
 
